# nvmetrics

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Eval.hpp  Metric.hpp  README.md  ScopeExit.h  Utils.h  main.cu  measureMetricPW.hpp  pythonInterface.cpp
cmake/: cupti.cmake  environment-module.in
demo/: CMakeLists.txt  demo.py  main.cu  query.py
lib/: CMakeLists.txt  ScopeExit.h  config.cpp  config.h  eval.cpp  eval.h  nv_metrics.cpp  nv_metrics.h  parser.cpp  parser.h  utils.cpp  utils.h
python/: CMakeLists.txt  pynvmetrics.cpp
